src/Components/Footer/Footer.css
   FOOTER SECTION
  

/* .footer{
     padding: 60px 12%;  
     margin: 0;            
    display: flex;
    flex-direction: column;
    gap: 30px;
} */
 .footer{
    padding: 60px 0;   /* side padding hata do */
    margin: 0;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.footer-top,
.footer-bottom {
    max-width: 1350px;
    margin: auto;   /* 👈 ye center karega */
    width: 100%;
}
.footer-top{
    display: flex;
    justify-content: space-between;
}
.footer-top-left p{
    font-size: 20px;
    max-width: 400px;

}
.footer-top-left img{
    
    height: 100px;
    width: 250px;
    object-fit: contain;
    
    
}
.footer-top-right{
  display: flex;
  flex-direction: row;
  gap: 30px;
  align-items: center;
}
.wp-btn{
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 12px;

  padding: 16px 35px;
  border-radius: 40px;

  text-decoration: none;
  font-weight: 600;
  font-size: 20px;

  color: white;
  background: linear-gradient(267deg,#DA7C25 0.36%,#B923E1 102.06%);

  transition: 0.3s;
}

.wp-btn svg{
  font-size: 26px;
}

.wp-btn:hover{
  transform: scale(1.1);
}

.footer-email-input{
    display: flex;
    gap: 30px;
    padding: 20px 30px;
    border-radius: 50px;
    background: #32323B;
    padding-right: 80px;
}
.footer-email-input input{
    outline: none;
    border: none;
    background: transparent;
    color: #a0a0a0;
    font-family: outfit;
    font-size: 18px;
}
.footer-subscribe{
    font-size: 20px;
    padding: 22px 50px;
    border-radius: 50px;
    background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
    cursor: pointer;
    transition: 0.3s;
}

.footer-bottom{
    display: flex;
    justify-content: space-between;
    font-size: 18px;
}
.footer-bottom-right{
    display: flex;
    gap: 50px;
    margin-bottom: 50px;
}




.footer-bottom-right .anchor-link {
  color: white;
  text-decoration: none;
  cursor: pointer;
}

.footer-bottom-right .anchor-link:hover {
  text-decoration: underline;
}

.footer-email-input:hover{
    border: 2px solid white;
}
.footer-subscribe:hover{
transform: scale(1.1);
transition: 0.3s;
border: 2px solid white;
transform: translateY(-3px);
box-shadow: 0 10px 30px rgba(249, 115, 22, 0.4);
}

.footer hr{
    border: 1px solid #2a2a2a;
    margin: 20px 0;   /* 👈 Yeh gap create karega */
}



/* =========================
   RESPONSIVE
========================= */

@media (max-width: 992px) {
  .footer {
    margin: 100px 40px 50px;
  }

  .footer-top {
    flex-direction: column;
    gap: 50px;
  }
}






/* @media (max-width:768px){

    .footer{
        margin: 50px 20px;
        gap: 40px;
    }

    .footer-top{
        flex-direction: column;
        align-items: flex-start;
        gap: 30px;
    }

    .footer-top-left p{
        font-size: 16px;
        line-height: 26px;
    }

    .footer-top-left img{
     height: 60px;
     width: 160px;
    }

    .footer-top-right{
        flex-direction: column;
        width: 100%;
        gap: 15px;
    }

    .footer-email-input{
        width: 100%;
        padding: 12px 20px;
    }

    .footer-email-input input{
        width: 100%;
    }

    .footer-subscribe{
        width: 100%;
        text-align: center;
        font-size: 18px;
        padding: 14px;
    }

    .footer-bottom{
        flex-direction: column;
        align-items: flex-start;
        gap: 15px;
    }

    .footer-bottom-right{
        flex-direction: column;
        gap: 10px;
    }

    .footer-bottom-left{
        font-size: 14px;
    }

} */

@media (max-width:768px){

    .footer{
        margin: 50px 20px;
        gap: 40px;
    }

    .footer-top{
        flex-direction: column;
        align-items: flex-start;
        gap: 30px;
    }

    .footer-top-left p{
        font-size: 16px;
        line-height: 26px;
    }

    .footer-top-left img{
     height: 60px;
     width: 160px;
    }

    .footer-top-right{
        flex-direction: column;
        width: 100%;
        gap: 20px;
        align-items: center;
    }

    /* WhatsApp Buttons Responsive */

    .wp-btn{
        width: 90%;
        justify-content: center;
        font-size: 18px;
        padding: 14px 23px;
    }

    .wp-btn svg{
        font-size: 22px;
    }

    .footer-email-input{
        width: 100%;
        padding: 12px 20px;
    }

    .footer-email-input input{
        width: 100%;
    }

    

    .footer-bottom{
        flex-direction: column;
        align-items: flex-start;
        gap: 15px;
    }

    .footer-bottom-right{
        flex-direction: column;
        gap: 10px;
        font-size:14px ;
        order: 1;
        
    }

    .footer-bottom-left{
        font-size: 12px;
        order: 2;
    }
    .anchor-link{
        font-size: 14px;
    }

}

